# scoutfs-fsspec

./: .gitignore  pyproject.toml  setup.cfg
.github/workflows/: test.yml
scoutfs/: __init__.py  config.py
tests/: test_config.py
