[metadata]
name = scoutfs-fsspec
description = ScoutFS Filesystem -- Async SSH/SFTP backend for fsspec, specialized for ScoutFS Tape Storage
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
install_requires =
    sshfs>=2021.8.1
    requests>=2.31.0,<3
packages = find:

[options.entry_points]
fsspec.specs =
    scoutfs = scoutfs.spec:ScoutFSFileSystem
